@@ -1,1 +1,1 @@
-"""SNMP SMI"""
+# This file is necessary to make this directory a package.
